fix color contrast on homepage

--- a/css/less/header.less
+++ b/css/less/header.less
@@ -89,7 +89,7 @@
 }
 
 .menu-block {
-	background-color: rgba(210, 210, 210, 1);
+	background-color: #e6e6e6;
 	width: 100%;
 	text-align: center;
 }
@@ -114,7 +114,7 @@
 }
 
 .gray-menu {
-	background-color: rgba(210, 210, 210, 1);
+	background-color: #e6e6e6;
 }
 
 .hamburger-menu {
